<resources>
    <string name="app_name">BlueView</string>
    <!-- Strings related to login -->
    <string name="prompt_email">请输入账号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">首页</string>
    <string name="title_control">控制</string>
    <string name="title_map">地图</string>
    <string name="title_user">我的</string>
    <string name="blue_ys">蓝景注册隐私</string>
    <string name="remb_password">记住密码</string>
    <string name="find_key">忘记密码</string>
    <string name="new_user">注册</string>
    <string name="login_title">登陆</string>

</resources>